<resources>
    <string name="app_name">Houston Android</string>
    <string name="login_screen">Đăng nhập</string>
    <string name="main_screen">Houston</string>
    <string name="user_list">Danh sách</string>
    <string name="user_detail">Chi tiết</string>
    <string name="update_user_detail">Cập nhật thông tin</string>
    <string name="apply_update">Xác nhận cập nhật</string>
    <string name="edit_user_info">Chỉnh sửa thông tin</string>
    <string name="network_message">Mạng không ổn định, vui lòng thử lại sau</string>
    <string name="general_error_message">Thực hiện hành động thất bại, vui lòng thử lại</string>

    <!--Login screen-->
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_failed">Đăng nhập thất bại, vui lòng thử lại</string>
    <string name="wating_dialog_loading">Xin vui lòng chờ</string>

    <string name="confirm_delete_user">Bạn có muốn xóa người dùng này không?</string>
    <string name="dialog_confirm_text">    ĐỒNG Ý    </string>
    <string name="dialog_cancel_text">    ĐÓNG    </string>
    <string name="default_api_error_msg">Gặp sự cố khi kết nối. Vui lòng thử lại</string>
    <string name="dialog_default_title">    THÔNG BÁO    </string>
    <string name="dialog_ok">OK</string>
    <string name="add_to_title">Thêm thông tin</string>
    <string name="add_to_message">Bạn có chắc chắn với hành động thêm này</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>
    <string name="logout">Đăng xuất</string>
    <string name="logout_text">Bạn có chắc chắn muốn đăng xuất khỏi ứng dụng Houston123</string>
    <string name="update_account_info">Cập nhật tài khoản</string>
    <string name="search_and_add">Tìm kiểm và thêm</string>
    <string name="register">Đăng ký</string>
    <string name="start_search_and_add">Bắt đầu</string>
    <string name="search_and_add_message">Tìm thông tin người dùng cần thêm</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="old_password">Nhập mật khẩu cũ</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_new">Xác nhận mật khẩu mới</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="update_account">Cập nhật tài khoản</string>
    <string name="delete_user_failed">Xóa người dùng thất bại. Vui lòng thử lại</string>
    <string name="delete_user_success">Xóa người dùng thành công</string>
    <string name="update_user_success">Cập nhật thông tin người dùng thành công</string>
    <string name="update_user_failed">Cập nhật thông tin người thất bại. Vui lòng thử lại</string>
    <string name="close_dialog">ĐÓNG</string>
    <string name="invalid_confirm_pass">Xác nhận mật khẩu chưa đúng</string>
    <string name="change_password_failed">Đổi mật khẩu thất bại, vui lòng thử lại</string>
    <string-array name="home_resources_array">
        <item>Giáo viên</item>
        <item>Quản lí</item>
        <item>Học viên</item>
        <item>Lớp học</item>
        <item>Môn học</item>
    </string-array>
    <string name="lecturer">Giáo viên</string>
    <string name="manager">Quản lý</string>
    <string name="student">Học viên</string>
    <string name="clazz">Lớp học</string>
    <string name="subject">Môn học</string>
    <string name="manager_title">Chứa danh sách quản lý của Trung tâm</string>
    <string name="lecturer_title">Các giáo viên đang giảng dạy tại trung tâm</string>

    <string name="student_title">Danh sách tất cả học viên hiện tại</string>
    <string name="subject_title">Quản lý môn học của Trung tâm</string>
    <string name="clazz_title">Danh sách các lớp học hiện có</string>
    <string name="lecturer_add">Xếp lớp cho giáo viên</string>
    <string name="add_student_new">Thêm học viên mới</string>
    <string name="student_add">Xếp lớp cho học viên</string>

    <string name="personal_title">Quản lý cá nhân</string>
</resources>
