<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flbutton="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.trungnguyen.android.houston123.ui.main.ChangePasswordViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.trungnguyen.android.houston123.widget.houstonedittext.HoustonEditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/old_password"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword|numberPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <com.trungnguyen.android.houston123.widget.houstonedittext.HoustonEditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/new_password"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword|numberPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <com.trungnguyen.android.houston123.widget.houstonedittext.HoustonEditText
            android:id="@+id/edt_confirm_new"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/confirm_new"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword|numberPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <com.trungnguyen.android.houston123.widget.FlatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> viewModel.onChangePasswordAction(edtOldPass.getText().toString(),edtNewPass.getText().toString(), edtConfirmNew.getText().toString())}"
            android:padding="20dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            flbutton:buttonColor="@color/colorPrimary"
            flbutton:shadowColor="@color/fbutton_color_belize_hole"
            flbutton:shadowEnabled="true" />

    </LinearLayout>

</layout>
