<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.trungnguyen.android.houston123.ui.addto.SearchAndAddToViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.trungnguyen.android.houston123.widget.houstonedittext.HoustonEditText
                android:id="@+id/edt_search_to_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textCapWords|textVisiblePassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:onClick="@{(view) -> viewModel.onSubmitSearchToAdd(view, edtSearchToAdd.getText().toString())}"
                android:padding="10dp"
                android:text="@string/start_search_and_add" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_empty_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/search_and_add_message"
                android:textStyle="bold"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />
        </FrameLayout>


    </LinearLayout>
</layout>
